<resources>
    <string name="app_name">DemoAppTest</string>
    <string name="blue_color_name">Blue</string>
    <string name="red_color_name">Red</string>
    <string name="green_color_name">Green</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="fragment1_body">Fragment1 text. Welcome to Inteliment.</string>
    <string name="fragment2_body">Fragment2 text. Data is Oil.</string>
    <string name="fragment3_body">Fragment3 text. Excellence Award Winner.</string>
    <string name="fragment4_body">Fragment4 text. This is analytics in action.</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item4">Item 4</string>
    <string name="item5">Item 5</string>
</resources>
