<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.TabTaskActivity"
    android:background="@drawable/bg_super_blur">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        style="@style/MyCustomTabLayout"
        >
        <android.support.design.widget.TabItem
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/item1"/>


        <android.support.design.widget.TabItem
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/item2"/>


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item3"/>


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item4"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item5"/>

        </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_below="@id/tabLayout"
        android:minHeight="200dp"
        />

    <LinearLayout
        android:id="@+id/llButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/blue_color_name"
            android:layout_weight="0.33"/>


        <Button
            android:id="@+id/btnRed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/red_color_name"
            android:layout_weight="0.33"/>


        <Button
            android:id="@+id/btnGreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/green_color_name"
            android:layout_weight="0.33"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvItemNameIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/llButtonsContainer"
        android:padding="@dimen/activity_vertical_margin"
        style="@style/FragmentTextStyle"
        android:text="@string/item1"
        />

    <LinearLayout
        android:id="@+id/textViewsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvItemNameIndicator"
        android:orientation="vertical"
        android:minHeight="100dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview1"
            android:gravity="left"
            android:padding="@dimen/small_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview2"
            android:gravity="center_horizontal"
            android:padding="@dimen/small_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview3"
            android:padding="@dimen/small_padding"
            android:gravity="right"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/textViewsContainer">

        <ImageView
            android:id="@+id/ivDot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/radiobutton_off_background"/>

        <ImageView
            android:id="@+id/ivDot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/radiobutton_off_background"/>

        <ImageView
            android:id="@+id/ivDot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/radiobutton_off_background"/>

        <ImageView
            android:id="@+id/ivDot4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/radiobutton_off_background"/>

    </LinearLayout>

</RelativeLayout>
